
0.2.1 (upcoming)
  Clone method does not clone the _Rlw variable

0.2.0 (April 20th 2012)
  New lightweight serialization infrastructure (Ciaran Jessup).

0.1.0 (April 19th 2012)
  New file layout.
  Fixed a bug in how the cardinality is computed.
  Made the computation of the cardinality faster.



Note: A version 0.2.1 was released on May 1st 2012,  but it had
faulty decoding.
