@@ -11,43 +11,27 @@ public class example
     public static void Main(string[] args)
     {
 
-        var ewahBitmap1 = new EwahCompressedBitArray();
-        var ewahBitmap2 = new EwahCompressedBitArray();
-        ewahBitmap1.Set(0);
-        ewahBitmap1.Set(2);
-        ewahBitmap1.Set(64);
-        ewahBitmap1.Set(1 << 30);
+        var ewahBitmap1 = EwahCompressedBitArray.BitmapOf(0,2,64,1 << 30);
+        var ewahBitmap2 = EwahCompressedBitArray.BitmapOf(1,3,64,1 << 30);
         Console.WriteLine("Running demo program:");
-        Console.WriteLine("bitmap 1:");
-        foreach (int k in ewahBitmap1)
-            Console.WriteLine(k);
-        ewahBitmap2.Set(1);
-        ewahBitmap2.Set(3);
-        ewahBitmap2.Set(64);
-        ewahBitmap2.Set(1 << 30);
-        Console.WriteLine("bitmap 2:");
-        foreach (int k in ewahBitmap2)
-            Console.WriteLine(k);
-        Console.WriteLine();
-        Console.WriteLine("bitmap 1 OR bitmap 2:");
+        Console.WriteLine("bitmap 1: "+ewahBitmap1 );
+        Console.WriteLine("bitmap 2:"+ewahBitmap2);
         EwahCompressedBitArray orbitmap = ewahBitmap1.Or(ewahBitmap2);
-        foreach (int k in orbitmap)
-            Console.WriteLine(k);
+        Console.WriteLine();
+        Console.WriteLine("bitmap 1 OR bitmap 2:"+orbitmap);
         Console.WriteLine("memory usage: " + orbitmap.SizeInBytes + " bytes");
         Console.WriteLine();
-        Console.WriteLine("bitmap 1 AND bitmap 2:");
         EwahCompressedBitArray andbitmap = ewahBitmap1.And(ewahBitmap2);
-        foreach (int k in andbitmap)
-            Console.WriteLine(k);
+        Console.WriteLine("bitmap 1 AND bitmap 2:"+andbitmap);
         Console.WriteLine("memory usage: " + andbitmap.SizeInBytes + " bytes");
-        Console.WriteLine("bitmap 1 XOR bitmap 2:");
         EwahCompressedBitArray xorbitmap = ewahBitmap1.Xor(ewahBitmap2);
-        foreach (int k in xorbitmap)
-            Console.WriteLine(k);
+        Console.WriteLine("bitmap 1 XOR bitmap 2:"+xorbitmap);
         Console.WriteLine("memory usage: " + andbitmap.SizeInBytes + " bytes");
         Console.WriteLine("End of demo.");
         Console.WriteLine("");
-        var tr = new EwahCompressedBitArrayTest();/*
+        var tr = new EwahCompressedBitArrayTest();
+        tr.SsiYanKaiTest();
+        tr.testDebugSetSizeInBitsTest();
         tr.EwahIteratorProblem();
         tr.TayaraTest();
         tr.TestNot();
@@ -61,7 +45,7 @@ public class example
         tr.TestMassiveXOR();
         tr.HabermaasTest();
         tr.VanSchaikTest();
-        tr.TestRunningLengthWord();*/
+        tr.TestRunningLengthWord();
         tr.TestSizeInBits1();
         tr.TestHasNextSafe();
         tr.TestCloneEwahCompressedBitArray();
