@@ -847,7 +847,51 @@ namespace Ewah
 		      Assert.AreEqual(it.MoveNext(),true);
 		      Assert.AreEqual(0, it.Current);
 		  }
-        
+		  
+	  [Test]
+	 public void testDebugSetSizeInBitsTest() {      
+		  Console.WriteLine("testing DebugSetSizeInBits");
+		  EwahCompressedBitArray b = new EwahCompressedBitArray();
+	      
+	      b.Set(4);
+	      
+	      b.SetSizeInBits(6, true);
+	       
+	      List<int> positions = b.GetPositions();
+	      
+	      Assert.AreEqual(2, positions.Count);
+	      Assert.AreEqual(4, positions[0]);
+	      Assert.AreEqual(5, positions[1]);
+	      
+		  IEnumerator<int> iterator = ((IEnumerable<int>)b).GetEnumerator();
+	      Assert.AreEqual(true,iterator.MoveNext());
+	      Assert.AreEqual(4, iterator.Current);
+	      Assert.AreEqual(true,iterator.MoveNext());
+	      Assert.AreEqual(5, iterator.Current);
+	      Assert.AreEqual(false,iterator.MoveNext());
+	      
+	   }
+	   
+	    [Test]
+			public void SsiYanKaiTest() {
+		    Console.WriteLine("testing SsiYanKaiTest");
+		    EwahCompressedBitArray a = EwahCompressedBitArray.BitmapOf(39935, 39936, 39937, 39938, 39939, 39940, 39941, 39942, 39943, 39944, 39945, 39946, 39947, 39948, 39949, 39950, 39951, 39952, 39953, 39954, 39955, 39956, 39957, 39958, 39959, 39960, 39961, 39962, 39963, 39964, 39965, 39966, 39967, 39968, 39969, 39970, 39971, 39972, 39973, 39974, 39975, 39976, 39977, 39978, 39979, 39980, 39981, 39982, 39983, 39984, 39985, 39986, 39987, 39988, 39989, 39990, 39991, 39992, 39993, 39994, 39995, 39996, 39997, 39998, 39999, 40000, 40001, 40002, 40003, 40004, 40005, 40006, 40007, 40008, 40009, 40010, 40011, 40012, 40013, 40014, 40015, 40016, 40017, 40018, 40019, 40020, 40021, 40022, 40023, 40024, 40025, 40026, 40027, 40028, 40029, 40030, 40031, 40032, 40033, 40034, 40035, 40036, 40037, 40038, 40039, 40040, 40041, 40042, 40043, 40044, 40045, 40046, 40047, 40048, 40049, 40050, 40051, 40052, 40053, 40054, 40055, 40056, 40057, 40058, 40059, 40060, 40061, 40062, 40063, 40064, 40065, 40066, 40067, 40068, 40069, 40070, 40071, 40072, 40073, 40074, 40075, 40076, 40077, 40078, 40079, 40080, 40081, 40082, 40083, 40084, 40085, 40086, 40087, 40088, 40089, 40090, 40091, 40092, 40093, 40094, 40095, 40096, 40097, 40098, 40099, 40100);
+		    EwahCompressedBitArray b = EwahCompressedBitArray.BitmapOf(39935, 39936, 39937, 39938, 39939, 39940, 39941, 39942, 39943, 39944, 39945, 39946, 39947, 39948, 39949, 39950, 39951, 39952, 39953, 39954, 39955, 39956, 39957, 39958, 39959, 39960, 39961, 39962, 39963, 39964, 39965, 39966, 39967, 39968, 39969, 39970, 39971, 39972, 39973, 39974, 39975, 39976, 39977, 39978, 39979, 39980, 39981, 39982, 39983, 39984, 39985, 39986, 39987, 39988, 39989, 39990, 39991, 39992, 39993, 39994, 39995, 39996, 39997, 39998, 39999, 270000);
+		    HashSet<int> aPositions = new HashSet<int>(a.GetPositions());    
+		    int intersection = 0;
+		    EwahCompressedBitArray inter = new EwahCompressedBitArray();
+		    HashSet<int> bPositions = new HashSet<int>(b.GetPositions());
+		    foreach (int integer in bPositions) {
+		       if (aPositions.Contains(integer)) {
+		         inter.Set(integer);
+		          ++intersection;
+		       }
+		    }
+		    EwahCompressedBitArray and2 = a.And(b);      
+		    Assert.AreEqual(true,and2.Equals(inter));
+		    Assert.AreEqual(intersection ,and2.GetCardinality());
+		  } 
+		  
         [Test]
 		public void TestCloneEwahCompressedBitArray()
 		{
